move things and get an initial db to work :D

--- a/watermelon/docker-compose.yaml
+++ b/watermelon/docker-compose.yaml
@@ -6,8 +6,23 @@ services:
       dockerfile: Dockerfile
     ports:
       - 8090:80
-    develop:
-      watch:
-        - path: ./src/
-          target: /var/www/html/
-          action: sync
+    environment:
+      DB_HOST: database
+      DB_USER: ${DB_USER}
+      DB_PASS: ${DB_PASS}
+      DB_NAME: ${DB_NAME}
+      DB_PORT: ${DB_PORT:-3306}
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - database
+
+  database:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./db_data:/var/lib/mysql
