fix things and make it run!!!, at least db, lets see php stuff and db access

--- a/watermelon/docker-compose.yaml
+++ b/watermelon/docker-compose.yaml
@@ -25,4 +25,5 @@ services:
     ports:
       - "3306:3306"
     volumes:
+      - ./lib/store/0init:/docker-entrypoint-initdb.d/
       - ./db_data:/var/lib/mysql
