--- a/watermelon/docker-compose.yaml
+++ b/watermelon/docker-compose.yaml
@@ -14,6 +14,11 @@ services:
       DB_PORT: ${DB_PORT:-3306}
     depends_on:
       - database
+    develop:
+      watch:
+        - path: ./src/
+          target: /var/www/html/
+          action: sync
 
   database:
     image: mysql:8.0
