--- a/watermelon/docker-compose.yaml
+++ b/watermelon/docker-compose.yaml
@@ -19,6 +19,12 @@ services:
         - path: .
           target: /var/www/html/
           action: sync
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8090"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
   database:
     image: mysql:8.0
